# reactrix

./: .env  .envrc  Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.local.yaml  docker-compose.override.yaml  docker-compose.yaml  stack.yaml
.github/workflows/: rust.yml
migrations/2019-10-16-162643_setup/: up.sql
migrations/2019-11-17-222546_keystore/: down.sql  up.sql
src/: api.rs  datastore.rs  error.rs  graphql.rs  keystore.rs  lib.rs  model.rs  models.rs  results.rs  schema.rs  server.rs
