[package]
name = "reactrix"
version = "0.1.0"
authors = ["Alexander Kahl <ak@sodosopa.io>"]
edition = "2018"

[dependencies]
rocket = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.41"
chrono = "0.4.9"
dotenv = "0.14.1"
failure = "0.1.6"
structopt = "0.2.18"
blake2 = "0.8.1"
sodiumoxide = "0.2.5"
hex = "0.4.0"
base64 = "0.11.0"
reqwest = { version = "0.10.1", features = ["json", "blocking"] }
zmq = "0.9.2"
exitfailure = "0.5.1"
rmp-serde = "0.14.0"
log = "0.4.8"
env_logger = "0.7.1"

[dependencies.rocket_contrib]
version = "0.4.2"
default-features = false
features = ["diesel_postgres_pool", "json"]

[dependencies.diesel]
version = "1.4.3"
features = ["serde_json", "chrono", "postgres"]
