[package]
name = "reactrix"
version = "0.1.0"
authors = ["Alexander Kahl <ak@sodosopa.io>"]
edition = "2018"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.41"
dotenv = "0.14.1"
failure = "0.1.6"
base64 = "0.11.0"
reqwest = { version = "0.10.1", features = ["json", "blocking"] }
rmp-serde = "0.14.0"
log = "0.4.8"
url = "2.1.1"
warp = "0.1.8"
juniper = "0.14.2"
juniper_warp = "0.5.2"
zmq = "0.9.2"
regex = "1.3"
lazy_static = "1.4.0"

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.diesel]
version = "1.4.3"
features = ["serde_json", "chrono", "postgres"]
